--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,12 @@
         </activity>
         <activity android:name=".NumbersActivity"
             android:label="@string/category_numbers"/>
-        <activity android:name=".FamilyActivity" />
-        <activity android:name=".ColorsActivity" />
-        <activity android:name=".PhrasesActivity"></activity>
+        <activity android:name=".FamilyActivity"
+            android:label="@string/category_family"/>
+        <activity android:name=".ColorsActivity"
+            android:label="@string/category_colors"/>
+        <activity android:name=".PhrasesActivity"
+            android:label="@string/category_phrases"/>
     </application>
 
 </manifest>
